# 3D-Med-Bench

./: .env.example  .gitignore  README.md  pyproject.toml
cases/TEMPLATE/: presentation.md  world_config.yaml
clinicraft/: __init__.py  config.py
clinicraft/annotation/: __init__.py  consensus.py  irr.py  schema.py  workflow.py
clinicraft/environment/: __init__.py  clinical_env.py  consequence.py
clinicraft/judge/: __init__.py  llm_judge.py  multimodal_judge.py  scorer.py
clinicraft/metrics/: __init__.py  bayesian.py  calibration.py  consistency.py  error_taxonomy.py
clinicraft/patient/: __init__.py  hallucination_guard.py  host.py  memory.py
clinicraft/physio/: __init__.py  dataset_client.py  findings_library.py  grounding.py  pulse_client.py  scenario.py
clinicraft/pipeline/: __init__.py  flow.py  stage1_ingest.py  stage2_deid.py  stage3_gtg.py  stage4_physio.py  stage5_embody.py  stage6_pack.py  stage7_qc.py
clinicraft/render/: __init__.py  scene_renderer.py  sign_library.py  sign_map_export.py
clinicraft/schemas/: __init__.py  case_pack.py  clinical_case.py  ground_truth.py  interaction.py  rubric.py
clinicraft/verifier/: __init__.py  oracle.py  replay.py
governance/: README.md
resources/avatars_cc0/godot_project/: README.md  project.godot
resources/avatars_cc0/godot_project/data/: sign_render_map.json
resources/avatars_cc0/godot_project/scenes/: render_scene.tscn
resources/avatars_cc0/godot_project/scripts/: procedural_avatar.gd  render_main.gd
resources/findings_lib/: findings.yaml
resources/physio_scenarios/: anaphylaxis.yaml  cardiogenic_shock_stemi.yaml  dka.yaml  hemorrhage_class3.yaml  respiratory_failure_type2.yaml  septic_shock.yaml
resources/sign_render_lib/: signs.yaml
scripts/: annotate_gtg.py  eval_all.py  eval_all.sh  ingest_corpus.py  run.sh  run_consistency.py  run_doctor.py  run_doctor.sh
tests/: conftest.py  test_annotation.py  test_fixes.py  test_metrics.py  test_physio.py  test_render.py  test_schemas.py  test_stage1.py
