[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clinicraft-bench"
version = "0.1.0"
description = "CliniCraft-Bench v3.0 — embodied 3D clinical evaluation benchmark"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    # LLM / AI
    "anthropic>=0.50.0",
    # Core schemas & validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # Chinese NLP preprocessing
    "hanlp>=2.1.0b54",
    # De-identification
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "spacy>=3.7",
    # Ontologies
    "obonet>=1.0",            # HPO/OBO parsing (most mature)
    "phenopackets>=2.0.2",    # Phenopackets (Google, GA4GH)
    "pronto>=2.5",            # OBO ontology (alternative)
    # Graph (GTG)
    "networkx>=3.3",
    # Pipeline orchestration
    "prefect>=2.19",
    # CLI & terminal
    "typer>=0.12",
    "rich>=13.7",
    "tqdm>=4.66",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    # Storage & config
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    # HTTP & retry
    "httpx>=0.27",
    "tenacity>=8.3",
    # Logging
    "loguru>=0.7",
    # Hashing / IDs
    "xxhash>=3.4",
    "ulid-py>=1.1",
    # Metrics
    "scikit-learn>=1.5",      # ECE calibration
    "scipy>=1.13",
    # MLflow tracking
    "mlflow>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.103",
    "ruff>=0.4",
    "mypy>=1.10",
]
pulse = [
    "pulse-cpp-python>=6.0",  # Pulse Engine Python bindings (install separately)
]
render = [
    "Pillow>=10.3",           # Image processing for rendered frames
    "av>=12.0",               # Video frame extraction
    "opencv-python>=4.9",
]

[project.scripts]
clinicraft-ingest   = "scripts.ingest_corpus:app"
clinicraft-run      = "scripts.run_doctor:app"
clinicraft-eval     = "scripts.eval_all:app"

[tool.hatch.build.targets.wheel]
packages = ["clinicraft"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
